# 3plug

./: .gitignore  3plug  3plug.cmd  Procfile  README.md  license  next.config.mjs  package-lock.json  package.json  pyproject.toml  rnd.md
administration/: README.md
config/: apps.txt  plugs.txt
doc/: cli_internal_guide.md
doc/journal/: 2026-02-25.md  2026-02-26.md  README.md
doc/rnd/: rnd2.md
doc/rnd/adm/: adm1.md
doc/rnd/mgt/: mgt1.md
doc/rnd/ops/: ops1.md
integrations/: README.md
management/: README.md
manifold/: export.py  manage.py  requirements.txt  test_email.py
manifold/core/: admin.py  apps.py  crons.py  db_router.py  dynamic_api.py  logs.py  middleware.py  permissions.py  signals.py  urls.py
manifold/core/filters/: core.py  sidebar_link.py  template.py
manifold/core/migrations/: 0001_initial.py  0002_alter_changelog_id.py  0003_sidebarlink.py
manifold/core/models/: __init__.py  auth.py  barcode.py  communication.py  core.py  reminder.py  sidebar_link.py  template.py  user_role.py
manifold/core/serializers/: auth.py  core.py  sidebar_link.py  template.py
manifold/manifold/: asgi.py  settings.py  urls.py  wsgi.py
operations/: README.md
plug/: __init__.py  cli.py
plug-platform/: README.md
plug/apps/: __init__.py  dropapp.py  getapp.py  new.py  plugs.py
plug/main/: __init__.py  build.py  deploy.py  init.py  install.py  setup.py  setup_dev_env.py  start.py
plug/sites/: __init__.py  drop.py  installapp.py  installdoc.py  installmodule.py  movedoc.py  new.py  uninstallapp.py  use.py
plug/templates/: hooks.py
plug/utils/: config.py  default_site.py  file_operations.py  initialize_django.py  register_models.py  register_prints.py  run_process.py  text.py
public/: site.webmanifest
scripts/: plt_doc_translation_inventory.py  plt_expand_exact_mapping_template.py  plt_fill_exact_mapping_candidates_from_seed.py  plt_generate_doc_runtime.py  plt_generate_frappe_mapping_seed.py  plt_seed_remaining_native_docs.py  plt_seed_schema_from_exact_frappe_mappings.py  plt_sync_docs_to_doctype_bridge.py
src/contexts/: AppProviders.js  DataContext.js  UiDirectionContext.js
src/custom/: customConfig.js  masafa.js
src/hooks/: useDocumentData.js  useFormButtons.js  useFormEvents.js  useFormLogic.js  usePltPageChrome.js  usePltShellContext.js
src/pages/: 404.js  _app.js  _document.js  forgot-password.js  home.js  index.js  launcher.js  login.js  otp-verification.js  settings.js  signup.js
src/styles/: globals.css
src/templates/: app.js
src/utils/: Api.js  events.js  findDocDetails.js  generateSidebarData.js  handleSave.js  importFile.js  nativeDocRuntime.js  platformFetch.js  platformResolver.js  tenant.js
(+241 files in other folders)
